--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="msger">
         <header class="msger-header">
-            <div class="msger-header-title">Holubník Web</div>
+            <div class="msger-header-title">Holubník Web <small>v1.2</small></div>
             <button id="config-button" class="msger-config-btn" title="Nastavenia"><i class="fas fa-gear"></i></button>
         </header>
 
