--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="index.css">
     <title>Holubník</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
@@ -10,7 +10,7 @@
 <body>
     <section class="msger">
         <header class="msger-header">
-            <div class="msger-header-title">Holubník Web <small>v1.2</small></div>
+            <div class="msger-header-title">Holubník Web <small>v1.3</small></div>
             <button id="config-button" class="msger-config-btn" title="Nastavenia"><i class="fas fa-gear"></i></button>
         </header>
 
@@ -18,7 +18,7 @@
         </main>
 
         <form class="msger-inputarea">
-            <input type="text" class="msger-input" placeholder="Zadajte vašu správu...">
+            <input type="text" class="msger-input" placeholder="Zadajte správu...">
             <button id="submit-button"type="submit" class="msger-send-btn">Odoslať</button>
         </form>
     </section>
