--- a/index.html
+++ b/index.html
@@ -3,16 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Holubník</title>
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <title>Holub</title>
     <script>
         // Make the dark-theme the default one
         document.documentElement.classList.add('dark-scheme');
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
+    <style>
+        /* Modal Styles */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.7); /* Black background with transparency */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            width: 600px;
+        }
+
+        .modal-content img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 15px;
+        }
+
+        .modal-content input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .modal-content button {
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: #007bff;
+            color: white;
+        }
+
+        .modal-content button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
+    <!-- Debugging Stuff -->
+    <!-- <canvas id="waveform" width="80" height="80" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); max-height: 60vh; max-width: 60vw;"></canvas> -->
+
+    <!-- Chat Container -->
     <section class="msger">
         <header class="msger-header">
             <div class="msger-header-title">Holubník Web <small>v1.3</small></div>
@@ -23,19 +81,25 @@
         </main>
 
         <form class="msger-inputarea">
-            <button id="attachment-button" type="attachment" class="msger-attachment-btn"><i class="fas fa-plus"></i></button>
-            <input type="text" class="msger-input" placeholder="Zadajte správu...">
-            <button id="submit-button"type="submit" class="msger-send-btn">Odoslať</button>
+            <label for="attachment-input" class="msger-attachment-btn">
+                <input id="attachment-input" class="msger-attachment-input" type="file" accept=".png, .jpg, .jpeg">
+                <i class="fas fa-plus" style="margin: auto;"></i>
+            </label>
+            <textarea class="msger-input" placeholder="Zadajte správu..." maxlength="256" rows="1" style="height: auto; overflow: hidden; resize: none;" oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"></textarea>
+            <button id="submit-button" class="msger-send-btn" type="button">Odoslať</button>
         </form>
     </section>
+
+    <!-- Image Upload Modal -->
+    <div id="image-modal" class="modal">
+        <div class="modal-content">
+            <img id="modal-image" alt="Image Preview">
+            <input id="image-label" type="text" placeholder="Add a label...">
+            <button id="send-button">Send</button>
+        </div>
+    </div>
 </body>
 
-<!-- <script src="bindings.js"></script>
-<script>
-    // Wait until the wasm module is loaded
-    setTimeout(() => {
-        console.log(wasmExports.add(10, 20))
-    }, 3000);
-</script> -->
-<script type=module src="index.js"></script>
+<script type="module" src="src/bindings.js"></script>
+<script type="module" src="src/index.js"></script>
 </html>
