--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
 
         .modal-content {
-            background-color: #fff;
+            background-color: #201c1c;
             border-radius: 10px;
             padding: 20px;
             text-align: center;
@@ -73,7 +73,7 @@
     <!-- Chat Container -->
     <section class="msger">
         <header class="msger-header">
-            <div class="msger-header-title">Holubník Web <small>v1.5</small></div>
+            <div class="msger-header-title">Holubník Web <small>v1.6</small></div>
             <button id="config-button" class="msger-config-btn" title="Nastavenia"><i class="fas fa-gear"></i></button>
         </header>
 
@@ -95,7 +95,7 @@
         <div class="modal-content">
             <img id="modal-image" alt="Image Preview">
             <input id="image-label" type="text" placeholder="Add a label...">
-            <button id="send-button">Send</button>
+            <button id="send-button">Odoslať</button>
         </div>
     </div>
 </body>
