--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- Chat Container -->
     <section class="msger">
         <header class="msger-header">
-            <div class="msger-header-title">Holubník Web <small>v1.6</small></div>
+            <div class="msger-header-title">Holubník Web <small>v1.7</small></div>
             <button id="config-button" class="msger-config-btn" title="Nastavenia"><i class="fas fa-gear"></i></button>
         </header>
 
@@ -93,8 +93,8 @@
     <!-- Image Upload Modal -->
     <div id="image-modal" class="modal">
         <div class="modal-content">
-            <img id="modal-image" alt="Image Preview">
-            <input id="image-label" type="text" placeholder="Add a label...">
+            <img id="modal-image" alt="Náhľad obrázka">
+            <input id="image-label" type="text" placeholder="Zadajte popis obrázka...">
             <button id="send-button">Odoslať</button>
         </div>
     </div>
