- Added some nice little features.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="styles/index.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <!-- <meta http-equiv="Cache-control" content="public"> -->
     <title>Holub</title>
     <script>
         // Make the dark-theme the default one
